exports[`test renders <div> w/ correct children of type <Item> 1`] = `
<div
  className="container">
  <div
    className="columns">
    <div
      className="column is-10 is-offset-2">
      <article
        className="media">
        <figure
          className="media-left">
          <p
            className="image is-128x128">
            <img
              alt="User icon"
              src="http://bulma.io/images/placeholders/256x256.png" />
          </p>
        </figure>
        <div
          className="media-content">
          <h1
            className="title is-1">
            adamsome
          </h1>
          <p
            className="subtitle is-5">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut eros non quam faucibus mattis quis quis sem. Praesent cursus pretium leo, sit amet dignissim felis vulputate at.
          </p>
        </div>
        <div
          className="media-right">
          <a
            className="card-header-icon">
            <span
              className="icon is-large">
              <i
                className="fa fa-ellipsis-h" />
            </span>
          </a>
        </div>
      </article>
    </div>
  </div>
  <div
    className="columns">
    <div
      className="column is-10 is-offset-2">
      <h2
        className="title is-2">
        Lists
      </h2>
      <div
        className="columns is-multiline">
        <div
          className="column is-one-quarter">
          <ListTile
            title="Test One" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders null based on initial state (empty "list" array) 1`] = `
<div
  className="container">
  <div
    className="columns">
    <div
      className="column is-10 is-offset-2">
      <article
        className="media">
        <figure
          className="media-left">
          <p
            className="image is-128x128">
            <img
              alt="User icon"
              src="http://bulma.io/images/placeholders/256x256.png" />
          </p>
        </figure>
        <div
          className="media-content">
          <h1
            className="title is-1">
            adamsome
          </h1>
          <p
            className="subtitle is-5">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut eros non quam faucibus mattis quis quis sem. Praesent cursus pretium leo, sit amet dignissim felis vulputate at.
          </p>
        </div>
        <div
          className="media-right">
          <a
            className="card-header-icon">
            <span
              className="icon is-large">
              <i
                className="fa fa-ellipsis-h" />
            </span>
          </a>
        </div>
      </article>
    </div>
  </div>
  <div
    className="columns">
    <div
      className="column is-10 is-offset-2">
      <h2
        className="title is-2">
        Lists
      </h2>
      <div
        className="columns is-multiline">
        <div>
          No Items!
        </div>
      </div>
    </div>
  </div>
</div>
`;
